syntax = "proto3";

package user;

service UserService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetCourseInfo(GetCourseInfoRequest) returns (CourseInfoResponse);
}

message SignUpRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message SignUpResponse {
    string message = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string id = 1;
    string message = 2;
}

message GetCourseInfoRequest {}

message CourseInfoResponse {
    int id = 1;
    string course = 2;
    string price = 3;
}
